--- a/11-bootstrap/05-tables.html
+++ b/11-bootstrap/05-tables.html
@@ -15,9 +15,131 @@
 
     <main class="container">
         <div class="row">
-            <div class="col-md-6 offset-md-3 mt-3 ">
+            <div class="col-md-12 my-5">
                 <h1 class="text-center text-danger">Tables</h1>
                 <hr>
+                
+                <!-- Breadcrumb -->
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                      <li class="breadcrumb-item">
+                          <a href="index.html">
+                              <i class="fa fa-home"></i>
+                              Main Menu
+                            </a>
+                        </li>
+                      <li class="breadcrumb-item active" aria-current="page">
+                          <i class="fa fa-file-code"></i>
+                          Tables
+                        </li>
+                    </ol>
+                </nav>
+
+                <div class="row">
+                    <div class="col-md-8 offset-md-2">
+                        <h3 class="text-muted">Example #1</h3>
+                        <table class="table table-striped table-hover table-bordered table-sm">
+                            <thead>
+                              <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">First</th>
+                                <th scope="col">Last</th>
+                                <th scope="col" class="d-none d-sm-table-cell">Handle</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <th scope="row">1</th>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                                <td class="d-none d-sm-table-cell">@mdo</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">2</th>
+                                <td>Jacob</td>
+                                <td>Thornton</td>
+                                <td class="d-none d-sm-table-cell">@fat</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">3</th>
+                                <td>Larry</td>
+                                <td>The Bird</td>
+                                <td class="d-none d-sm-table-cell">@ltbird</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">4</th>
+                                <td>Arcanio</td>
+                                <td>José</td>
+                                <td class="d-none d-sm-table-cell">@acrsé</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">5</th>
+                                <td>Marino</td>
+                                <td>JJ</td>
+                                <td class="d-none d-sm-table-cell">@jmarinoj</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">5</th>
+                                <td>Mery</td>
+                                <td>Jane</td>
+                                <td class="d-none d-sm-table-cell">@mariaj</td>
+                              </tr>                              
+                            </tbody>
+                        </table>
+                        <!--  -->
+                        <!--  -->
+                        <h3 class="text-muted mt-5">Example #1</h3>
+
+                        <table class="table table-dark table-striped table-hover">
+                            <thead>
+                              <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">First</th>
+                                <th scope="col">Last</th>
+                                <th scope="col" class="d-none d-sm-table-cell">Handle</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <th scope="row">1</th>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                                <td class="d-none d-sm-table-cell">@mdo</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">2</th>
+                                <td>Jacob</td>
+                                <td>Thornton</td>
+                                <td class="d-none d-sm-table-cell">@fat</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">3</th>
+                                <td>Larry</td>
+                                <td>The Bird</td>
+                                <td class="d-none d-sm-table-cell">@ltbird</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">4</th>
+                                <td>Arcanio</td>
+                                <td>José</td>
+                                <td class="d-none d-sm-table-cell">@acrsé</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">5</th>
+                                <td>Marino</td>
+                                <td>JJ</td>
+                                <td class="d-none d-sm-table-cell">@jmarinoj</td>
+                              </tr>
+                              <tr>
+                                <th scope="row">5</th>
+                                <td>Mery</td>
+                                <td>Jane</td>
+                                <td class="d-none d-sm-table-cell">@mariaj</td>
+                              </tr>                              
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
 
             </div>
         </div>
