--- a/11-bootstrap/index.html
+++ b/11-bootstrap/index.html
@@ -50,6 +50,43 @@
                 </div>
                 <hr class="mt-5"> 
 
+                <h3 class="text-center text-primary mt-4">03 - Forms</h3>
+                <div class="btn-group-vertical d-flex mx-5 ">
+                    <a href="06-forms-elements.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        06 - Forms Elements
+                    </a>
+                    <a href="07-floating-labels.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        07 - Floating Labels
+                    </a>
+                    <a href="08-validation.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        08 - Validation
+                    </a>
+                </div>
+                <hr class="mt-5"> 
+
+                <h3 class="text-center text-primary mt-4">04 - Components</h3>
+                <div class="btn-group-vertical d-flex mx-5 ">
+                    <a href="09-accordion.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        09 - Accordion
+                    </a>
+                    <a href="10-alerts.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        10 - Alerts
+                    </a>
+                    <a href="11-badge.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        11 - Badge
+                    </a>
+                    <a href="12-buttons.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        12 - Buttons
+                    </a>
+                </div>
+                <hr class="mt-5"> 
             </div>
         </div>
     </main>
