--- a/11-bootstrap/03-typography.html
+++ b/11-bootstrap/03-typography.html
@@ -15,10 +15,81 @@
 
     <main class="container">
         <div class="row">
-            <div class="col-md-6 offset-md-3 mt-3 ">
+            <div class="col-md-12 my-5">
                 <h1 class="text-center text-danger">Typography</h1>
                 <hr>
+                
+                <!-- Breadcrumb -->
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                      <li class="breadcrumb-item">
+                          <a href="index.html">
+                              <i class="fa fa-home"></i>
+                              Main Menu
+                            </a>
+                        </li>
+                      <li class="breadcrumb-item active" aria-current="page">
+                          <i class="fa fa-file-code"></i>
+                          Typography
+                        </li>
+                    </ol>
+                </nav>
 
+                <div class="row">
+                    <div class="col-md-4 offset-md-4">
+                        <!--  -->
+                        <h3 class="text-muted mt-5">Headings:</h3>
+                        <p class="h1">h1. Bootstrap heading</p>
+                        <p class="h2">h2. Bootstrap heading</p>
+                        <p class="h3">h3. Bootstrap heading</p>
+                        <p class="h4">h4. Bootstrap heading</p>
+                        <p class="h5">h5. Bootstrap heading</p>
+                        <p class="h6">h6. Bootstrap heading</p>                           
+                        <!--  -->                
+                        <h3 class="text-muted mt-5">Display Headings:</h3>
+                        <h1 class="display-1">Display 1</h1>
+                        <h1 class="display-2">Display 2</h1>
+                        <h1 class="display-3">Display 3</h1>
+                        <h1 class="display-4">Display 4</h1>
+                        <h1 class="display-5">Display 5</h1>
+                        <h1 class="display-6">Display 6</h1>        
+                        <!--  -->
+                        <h3 class="text-muted mt-5">Lead:</h3>
+                        <p class="lead">This is a lead paragraph. It stands out from regular paragraphs.</p>
+                        <!--  -->
+                        <h3 class="text-muted mt-5">Alignment:</h3>
+                        <h4 class="text-muted mt-2">Right Align</h4>
+                        <figure class="text-end">
+                            <blockquote class="blockquote">
+                              <p>A well-known quote, contained in a blockquote element.</p>
+                            </blockquote>
+                            <figcaption class="blockquote-footer">
+                              Someone famous in <cite title="Source Title">Source Title</cite>
+                            </figcaption>
+                        </figure>
+
+                        <h4 class="text-muted mt-2">Left Align</h4>
+                        <figure class="text-start">
+                            <blockquote class="blockquote">
+                              <p>A well-known quote, contained in a blockquote element.</p>
+                            </blockquote>
+                            <figcaption class="blockquote-footer">
+                              Someone famous in <cite title="Source Title">Source Title</cite>
+                            </figcaption>
+                        </figure>
+
+                        <h4 class="text-muted mt-2">Center Align</h4>
+                        <figure class="text-center">
+                            <blockquote class="blockquote">
+                              <p>A well-known quote, contained in a blockquote element.</p>
+                            </blockquote>
+                            <figcaption class="blockquote-footer">
+                              Someone famous in <cite title="Source Title">Source Title</cite>
+                            </figcaption>
+                        </figure>
+                        <!--  -->
+                    </div>
+                </div>                
             </div>
         </div>
     </main>
