--- a/11-bootstrap/24-tooltips.html
+++ b/11-bootstrap/24-tooltips.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blank</title>
+  <title>Tooltips</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/fontawesome.min.css">
   <link rel="stylesheet" href="css/all.css">
@@ -16,7 +16,7 @@
     <main class="container">
         <div class="row">
             <div class="col-md-12 my-5">
-                <h1 class="text-center text-danger">Blank</h1>
+                <h1 class="text-center text-danger">Tooltips</h1>
                 <hr>
                 
                 <!-- Breadcrumb -->
@@ -30,7 +30,7 @@
                         </li>
                       <li class="breadcrumb-item active" aria-current="page">
                           <i class="fa fa-file-code"></i>
-                          Blank
+                          Tooltips
                         </li>
                     </ol>
                 </nav>
@@ -39,8 +39,6 @@
                     <div class="col-md-4 offset-md-4">
                         <!--  -->
                         <h3 class="text-muted mt-5">Examples:</h3>
-
-                        
                     </div>
                 </div>
 
