--- a/11-bootstrap/index.html
+++ b/11-bootstrap/index.html
@@ -85,6 +85,54 @@
                         <i class="fa fa-file-code"> </i>
                         12 - Buttons
                     </a>
+                    <a href="13-cards.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        13 - Cards
+                    </a>
+                    <a href="14-carousel.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        14 - Carousel
+                    </a>
+                    <a href="15-dropdowns.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        15 - Dropdowns
+                    </a>
+                    <a href="16-modal.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        16 - Modal
+                    </a>
+                    <a href="17-navbar.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        17 - Navbar
+                    </a>
+                    <a href="18-offcanvas.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        18 - Offcanvas
+                    </a>
+                    <a href="19-pagination.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        19 - Pagination
+                    </a>
+                    <a href="20-popovers.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        20 - Popovers
+                    </a>
+                    <a href="21-progress.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        21 - Progress
+                    </a>
+                    <a href="22-scrollspy.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        22 - Scrollspy
+                    </a>
+                    <a href="23-spinners.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        23 - Spinners
+                    </a>
+                    <a href="24-tooltips.html" class="text-start btn btn-lg btn-outline-dark">
+                        <i class="fa fa-file-code"> </i>
+                        24 - Tooltips
+                    </a>
                 </div>
                 <hr class="mt-5"> 
             </div>
