--- a/12-tailwind/00-blank.html
+++ b/12-tailwind/00-blank.html
@@ -22,10 +22,9 @@
             <a class="text-4xl text-white bg-indigo-900 py-1 px-4 rounded-lg mr-20 transition hover:bg-violet-800 hover:-translate-x-1" href="index.html">◀</a>
             <h1 class="text-center text-4xl font-bold text-violet-900">Template</h1>
         </header>        
-        <section class="p-4 mx-auto bg-black bg-opacity-50 my-0">
+        <section class="p-4 mx-auto bg-black bg-opacity-50 my-0 w-10/12">
             <h2 class="text-2xl border-b-2 pb-4">Example:</h2>
-            <!-- Ejercicio -->
-            <!-- / Ejercicio -->
+            
         </section>
     </main>
 </body>
