--- a/12-tailwind/index.html
+++ b/12-tailwind/index.html
@@ -38,7 +38,22 @@
                 </li>
                 <li class="bg-indigo-800 rounded-lg hover:bg-indigo-900 cursor-pointer shadow-lg transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-indigo-900 duration:100">
                     <a class="flex p-4" href="05-object-fit.html">05- Object Fit</a>
-                </li>        
+                </li> 
+                <li class="bg-indigo-800 rounded-lg hover:bg-indigo-900 cursor-pointer shadow-lg transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-indigo-900 duration:100">
+                    <a class="flex p-4" href="06-overflow.html">06- Overflow</a>
+                </li>   
+                <li class="bg-indigo-800 rounded-lg hover:bg-indigo-900 cursor-pointer shadow-lg transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-indigo-900 duration:100">
+                    <a class="flex p-4" href="07-position.html">07- Position</a>
+                </li>   
+                <li class="bg-indigo-800 rounded-lg hover:bg-indigo-900 cursor-pointer shadow-lg transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-indigo-900 duration:100">
+                    <a class="flex p-4" href="08-visibility.html">08- Visibility</a>
+                </li>   
+                <li class="bg-indigo-800 rounded-lg hover:bg-indigo-900 cursor-pointer shadow-lg transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-indigo-900 duration:100">
+                    <a class="flex p-4" href="09-z-index.html">09- Z Index</a>
+                </li>  
+                <li class="bg-indigo-800 rounded-lg hover:bg-indigo-900 cursor-pointer shadow-lg transition ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-indigo-900 duration:100">
+                    <a class="flex p-4" href="10-menu-burger.html">10- Menu Burger</a>
+                </li>           
             </nav>
 
             <!-- / Tema 1 -->
