--- a/11-bootstrap/31-curriculum-vitae.html
+++ b/11-bootstrap/31-curriculum-vitae.html
@@ -135,7 +135,7 @@
                 </div>
             </div> 
             <div class="row justify-content-center">
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-12">
                     <div class="service-card mt-4">
                         <span class="footer-icon" style="font-size: 2rem; color:#1b1b1b;">
                             <i class="fas fa-icons fa-2x"></i>
@@ -146,7 +146,7 @@
                         </div>
                     </div> 
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-12">
                     <div class="service-card mt-4">
                         <span class="footer-icon" style="font-size: 2rem; color:#1b1b1b;">
                             <i class="fas fa-object-group fa-2x"></i>
@@ -157,7 +157,7 @@
                         </div>
                     </div> 
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-12">
                     <div class="service-card mt-4">
                         <span class="footer-icon" style="font-size: 2rem; color:#1b1b1b;">
                             <i class="fa fa-sitemap fa-2x"></i>
@@ -168,7 +168,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-12">
                     <div class="service-card mt-4">
                         <span class="footer-icon" style="font-size: 2rem; color:#1b1b1b;">
                             <i class="fas fa-code fa-2x"></i>
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-12">
                     <div class="service-card mt-4">
                         <span class="footer-icon" style="font-size: 2rem; color:#1b1b1b;">
                             <i class="fas fa-city fa-2x"></i>
@@ -190,7 +190,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-12">
                     <div class="service-card mt-4">
                         <span class="footer-icon" style="font-size: 2rem; color:#1b1b1b;">
                             <i class="fas fa-comment-dollar fa-2x"></i>
@@ -212,7 +212,7 @@
     <section class="carousel" id="media">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-12 col-sm-6 py-5">
+                <div class="col-lg-12 py-5">
                     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
