--- a/12-tailwind/03-display.html
+++ b/12-tailwind/03-display.html
@@ -49,7 +49,15 @@
                 </div>
             </div>
             
-            
+            <h2 class="text-2xl border-b-2 pb opacity-80 mb-10">Grid:</h2>
+            <div class="grid gap-4 md:grid-cols-3 grid-rows-1">
+                <div class="p-4 bg-rose-800 shadow-lg rounded-lg">1</div>
+                <div class="p-4 bg-rose-800 shadow-lg rounded-lg">2</div>
+                <div class="p-4 bg-rose-800 shadow-lg rounded-lg">3</div>
+                <div class="p-4 bg-rose-800 shadow-lg rounded-lg">4</div>
+                <div class="p-4 bg-rose-800 shadow-lg rounded-lg">5</div>
+                <div class="p-4 bg-rose-800 shadow-lg rounded-lg">6</div>
+            </div>
             <!-- / Ejercicio -->
         </section>
     </main>
