--- a/12-tailwind/08-visibility.html
+++ b/12-tailwind/08-visibility.html
@@ -13,26 +13,24 @@
     <script src="js/tailwind-3.0.23.js"></script>
     <link rel="stylesheet" href="css/custom.css">
 
-    <title>Floats</title>    
+    <title>Visibility</title>    
 </head>
 
 <body class="bg-gradient-to-b from-violet-500 via-purple-700 to-violet-800 min-h-screen text-white">
     <main class="">
         <header class="bg-indigo-100 bg-opacity-5 p-10 shadow-xl flex items-center justify-center">
             <a class="text-4xl text-white bg-indigo-900 py-1 px-4 rounded-lg mr-20 transition hover:bg-violet-800 hover:-translate-x-1" href="index.html">◀</a>
-            <h1 class="text-center text-4xl font-bold text-violet-900">Floats</h1>
+            <h1 class="text-center text-4xl font-bold text-violet-900">Visibility</h1>
         </header>        
         <section class="p-4 mx-auto bg-black bg-opacity-50 my-0 w-10/12">
-            <h2 class="text-2xl border-b-2 pb-4">Example:</h2>
-            <!-- Ejercicio -->
-            <p class="leading-8 text-justify w-6/12 mx-auto mt-5 mb-2">
-                <img src="https://via.placeholder.com/400x240/120/bbb" class="float-none mr-4 rounded-md sm:float-left">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nisi voluptate quis saepe fugiat, ipsum dolore perspiciatis quia, vero ullam temporibus maiores possimus officiis itaque expedita iste labore reiciendis distinctio.
-                <br>
-                <br>
-                Corporis illum! Itaque nobis autem voluptatum, aliquid sequi aperiam, et cumque atque, vel assumenda at ut quos. Quo ullam reiciendis autem eaque quasi aperiam saepe, quidem reprehenderit voluptas ducimus enim.
-            </p>
-            <!-- / Ejercicio -->
+            <h2 class="text-2xl border-b-2 pb-4">Invisible:</h2>
+
+            <div class="grid grid-cols-3 gap-4 p-10">
+                <div class="p-10 bg-purple-800 rounded-lg">01</div>
+                <div class="visible p-10 bg-violet-700 rounded-2xl">02</div>
+                <div class="p-10 bg-purple-800 rounded-lg">03</div>
+              </div>
+
         </section>
     </main>
 </body>
